# fish

./: .editorconfig  .gitignore  .taplo.toml  CMakeLists.txt  Cargo.toml  build.rs
benchmarks/: driver.sh
build_tools/: diff_profiles.fish  extract_help_sections.fish  fish_xgettext.fish  git_version_gen.sh  list_committers_since.fish  littlecheck.py  mac_notarize.sh  make_pkg.sh  make_tarball.sh  make_vendor_tarball.sh  style.fish
build_tools/osx_package_scripts/: add-shell  postinstall  preinstall
cmake/: Docs.cmake  FindRust.cmake  Install.cmake  PCRE2.cmake  Rust.cmake  Tests.cmake  Version.cmake  gettext.cmake
debian/: postinst  prerm  rules
docker/: docker_run_tests.sh
docker/context/: fish_run_tests.sh
etc/: config.fish
osx/: install.sh
printf/: Cargo.toml
share/: config.fish
share/completions/: abook.fish  ack.fish  adb.fish  alternatives.fish  ansible-vault.fish  ant.fish  apm.fish  apropos.fish  apt-cache.fish  apt-get.fish  apt-mark.fish  apt.fish  aptitude.fish  ar.fish  arc.fish  argparse.fish  as.fish  asd.fish  asp.fish  attrib.fish  attributes.fish  aura.fish  aws.fish  bd.fish  bind.fish  blender.fish  bluetoothctl.fish  bower.fish  btrfs.fish  bundle.fish  busctl.fish  cabal.fish  canto.fish  cargo.fish  cat.fish  cdh.fish  chgrp.fish  chmod.fish  chown.fish  chsh.fish  (+293 more)
share/functions/: N_.fish  __fish_any_arg_in.fish  __fish_anyeditor.fish  __fish_anypager.fish  __fish_anypython.fish  __fish_append.fish  __fish_apropos.fish  __fish_cache_sourced_completions.fish  __fish_cancel_commandline.fish  __fish_commandline_is_singlequoted.fish  __fish_complete_atool_archive_contents.fish  __fish_complete_bittorrent.fish  __fish_complete_blockdevice.fish  __fish_complete_cd.fish  __fish_complete_clang.fish  __fish_complete_command.fish  __fish_complete_convert_options.fish  __fish_complete_directories.fish  __fish_complete_docutils.fish  __fish_complete_ftp.fish  __fish_complete_gpg.fish  __fish_complete_gpg_key_id.fish  (+194 more)
src/: common.rs  complete.rs  env_dispatch.rs  env_universal_common.rs  exec.rs  fallback.rs  history.rs  input_common.rs  key.rs  lib.rs  libc.rs  locale.rs  parse_constants.rs  parse_util.rs  path.rs  proc.rs  reader.rs  screen.rs  signal.rs  topic_monitor.rs  wildcard.rs
src/history/: file.rs
tests/: filter-control-sequences.sh  interactive.fish  test_driver.sh  test_env.sh
(+64 files in other folders)
