[workspace]
members  = ["printf"]
resolver = "2"

[workspace.package]
edition      = "2021"
rust-version = "1.78.0"

[package]
default-run            = "fish"
edition.workspace      = true
name                   = "fish"
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
bitflags = "2.5.0"
errno = "0.3.9"
fast-float = { git = "https://github.com/fish-shell/fast-float-rust", branch = "fish" }
lazy_static = "1.4.0"
libc = "0.2.155"
pcre2 = { git = "https://github.com/fish-shell/rust-pcre2", branch = "master", default-features = false, features = [
  "utf32",
] }
# lru pulls in hashbrown by default, which uses a faster (though less DoS resistant) hashing algo.
# disabling default features uses the stdlib instead, but it doubles the time to rewrite the history
# files as of 22 April 2024.
lru        = "0.12.3"
nix        = { version = "0.29.0", default-features = false, features = ["inotify", "resource", "fs"] }
num-traits = "0.2.19"
once_cell  = "1.19.0"
fish-printf = { path = "./printf" }
rand       = { version = "0.8.5", features = ["small_rng"] }
terminfo   = "0.9.0"
widestring = "1.1.0"

[dev-dependencies]
rand_pcg    = "0.3.1"
serial_test = { version = "1.0.0", default-features = false }

[build-dependencies]
cc     = { version = "1.0.98", features = ["parallel"] }
rsconf = "0.2.2"

[lib]
crate-type = ["rlib"]
path       = "src/lib.rs"
test       = false

[[bin]]
name = "fish"
path = "src/bin/fish.rs"
test = false

[[bin]]
name = "fish_indent"
path = "src/bin/fish_indent.rs"
test = false

[[bin]]
name = "fish_key_reader"
path = "src/bin/fish_key_reader.rs"
test = false

[features]
benchmark = []
default   = []

[lints]
clippy.manual_range_contains  = "allow"
clippy.needless_return        = "allow"
rust.non_camel_case_types     = "allow"
rust.non_upper_case_globals   = "allow"
rust.unknown_lints            = "allow"
rust.unstable_name_collisions = "allow"

[profile.dev]
codegen-units = 256
incremental   = true
lto           = "off"
opt-level     = 1

[profile.release]
codegen-units    = 1
debug            = 0
debug-assertions = false
incremental      = false
lto              = "thin"
opt-level        = 3
overflow-checks  = false
panic            = "abort"
strip            = "symbols"
